--- a/ios/MangoWallet/Base.lproj/LaunchScreen.xib
+++ b/ios/MangoWallet/Base.lproj/LaunchScreen.xib
@@ -1,42 +1,73 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina5_9" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Powered by React Native" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="8ie-xW-0ye">
-                    <rect key="frame" x="20" y="439" width="441" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mango Wallet" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="kId-c2-rCX">
-                    <rect key="frame" x="20" y="140" width="441" height="43"/>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="36"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Fa-ov-BD5">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="430.33333333333331"/>
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logoMangocoinNotxt" translatesAutoresizingMaskIntoConstraints="NO" id="WYp-YW-Twm">
+                            <rect key="frame" x="115.66666666666669" y="144.66666666666666" width="144" height="140.99999999999997"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="141" id="Cnf-8v-BKM"/>
+                                <constraint firstAttribute="width" constant="144" id="LCP-dA-8u5"/>
+                            </constraints>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mango Coin" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NkX-U4-2HJ">
+                            <rect key="frame" x="98.666666666666686" y="285.66666666666669" width="178" height="38.333333333333314"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
+                            <color key="textColor" red="0.18431372549019609" green="0.39215686274509803" blue="0.81960784313725488" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" alpha="0.33000000000000002" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Make a better future" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ehk-zR-EJz">
+                            <rect key="frame" x="121.66666666666667" y="326" width="131.66666666666663" height="17"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <color key="textColor" red="0.18431372549019609" green="0.39215686274509803" blue="0.81960784313725488" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="NkX-U4-2HJ" firstAttribute="top" secondItem="WYp-YW-Twm" secondAttribute="bottom" id="3ef-6D-nsD"/>
+                        <constraint firstItem="Ehk-zR-EJz" firstAttribute="top" secondItem="NkX-U4-2HJ" secondAttribute="bottom" constant="2" id="Ggd-FI-jyK"/>
+                        <constraint firstItem="Ehk-zR-EJz" firstAttribute="centerX" secondItem="5Fa-ov-BD5" secondAttribute="centerX" id="KSJ-1f-fTn"/>
+                        <constraint firstItem="WYp-YW-Twm" firstAttribute="centerY" secondItem="5Fa-ov-BD5" secondAttribute="centerY" id="LRi-Ml-BSU"/>
+                        <constraint firstItem="NkX-U4-2HJ" firstAttribute="centerX" secondItem="5Fa-ov-BD5" secondAttribute="centerX" id="V3m-D5-Gr4"/>
+                        <constraint firstItem="WYp-YW-Twm" firstAttribute="centerX" secondItem="5Fa-ov-BD5" secondAttribute="centerX" id="xfy-nb-FN6"/>
+                    </constraints>
+                </view>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg1" translatesAutoresizingMaskIntoConstraints="NO" id="vdB-O6-TB5">
+                    <rect key="frame" x="0.0" y="430.33333333333326" width="375" height="439"/>
+                </imageView>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="bottom" multiplier="1/3" constant="1" id="5cJ-9S-tgC"/>
-                <constraint firstAttribute="centerX" secondItem="kId-c2-rCX" secondAttribute="centerX" id="Koa-jz-hwk"/>
-                <constraint firstAttribute="bottom" secondItem="8ie-xW-0ye" secondAttribute="bottom" constant="20" id="Kzo-t9-V3l"/>
-                <constraint firstItem="8ie-xW-0ye" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="MfP-vx-nX0"/>
-                <constraint firstAttribute="centerX" secondItem="8ie-xW-0ye" secondAttribute="centerX" id="ZEH-qu-HZ9"/>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="fvb-Df-36g"/>
+                <constraint firstItem="vdB-O6-TB5" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" id="ADM-ZD-sAc"/>
+                <constraint firstItem="vdB-O6-TB5" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="PAs-Ts-P80"/>
+                <constraint firstItem="5Fa-ov-BD5" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.53" id="Rh9-WJ-J1V"/>
+                <constraint firstItem="5Fa-ov-BD5" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="WQ5-fc-V0E"/>
+                <constraint firstItem="vdB-O6-TB5" firstAttribute="top" secondItem="5Fa-ov-BD5" secondAttribute="bottom" id="WWx-MS-oSt"/>
+                <constraint firstItem="5Fa-ov-BD5" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" id="ioI-of-bRT"/>
+                <constraint firstItem="5Fa-ov-BD5" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="yd0-fr-cxc"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="548" y="455"/>
+            <point key="canvasLocation" x="547.82608695652175" y="454.6875"/>
         </view>
     </objects>
+    <resources>
+        <image name="bg1" width="375" height="439"/>
+        <image name="logoMangocoinNotxt" width="144" height="141"/>
+    </resources>
 </document>
